# calculadoraMediaQT

./: CMakeLists.txt  Main.qml  README.md  backend.cpp  backend.h  main.cpp
